# Rogue

./: .gitmodules  README.md  dataLabeling.py  diarization.py  main.c  outC.txt  outC1.txt  outK.txt  stamp.c
.github/workflows/: cmake-single-platform.yml  cmake.yml
audio_sync/: analyzer.py
include/rogue/: rogue.h  wav.h
oldFiles/: CMakeLists.txt  stamp.c  wav.c
testOuts/: outC.txt  outC1.txt  outK.txt  outK1.txt
